--- a/assets/hivideo.css
+++ b/assets/hivideo.css
@@ -30,6 +30,32 @@
     height: 100%;
 }
 
+.hi-video-playIcon{
+    position: absolute;
+    z-index: 10000;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    
+    width: 100px;
+    height: 100px;
+    background: url("images/play-big.png") no-repeat;
+    background-size: 100px 100px;
+    cursor: pointer;
+}
+
+.hi-video-playIcon.onBtn{
+    display: block;
+ }
+
+.hi-video-playIcon.offBtn{
+    display: none;
+}
+
 .hi-video-controlbar{
     background: rgba(0, 0, 0, 0.75);
     color: #fff;
@@ -38,7 +64,7 @@
     position: absolute;
     left: 0;
     bottom: 0;
-    z-index: 2147483647;
+    z-index: 10000;
     padding: 10px 0;
 }
 
@@ -52,7 +78,7 @@
     vertical-align: middle;
 }
 
-.hi-video-controlbar input:active, .hi-video-controlbar input:hover,  .hi-video-controlbar input:focus
+.hi-video-controlbar input:active, .hi-video-controlbar input:hover, .hi-video-controlbar input:focus
 .hi-video-controlbar button:active, .hi-video-controlbar button:hover, .hi-video-controlbar button:focus{
     border: none;
     outline: none;
@@ -91,7 +117,7 @@
 }
 
 .hi-video-controlbar .video-slider{
-    width: 65%;
+    width: 55%;
     min-width: 10px;
     position: relative;
     z-index: 0;
@@ -108,7 +134,7 @@
 .hi-video-controlbar .video-slider .progressbar{
     position: absolute;
     left: 0;
-    top: 10px;
+    top: 11px;
     width: 100%;
     pointer-events: none;
     height: 1px;
@@ -174,7 +200,19 @@
     background: orange;
 }
 
+.hi-video-controlbar .video-time{
+    width: 15%;
+    min-width: 25px;
+    font-size: 10px;
+    color: #e0dfdf;
+    text-align: left;
+    padding-left: 5px;
+    line-height: 20px;
+}
+
 .hi-video-controlbar .volumebar{
+    display: inline-block;
+    width: 96%;
 }
 
 .hi-video-controlbar .video-mute{
@@ -199,7 +237,7 @@
 }
 
 .hi-video-controlbar .video-fullscreen{
-    width: 10%;
+    width: 5%;
     min-width: 5px;
     text-align: center;
     cursor: pointer;
@@ -210,10 +248,10 @@
 }
 
 .hi-video-controlbar .video-fullscreen .offBtn{
-     background: url("./images/fullscreen_off.png") no-repeat;
- }
+    background: url("./images/fullscreen_off.png") no-repeat;
+}
 
- .rotate90{
+.rotate90{
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
